Added a touch of lore

--- a/avatar/localisation/research_l_english.yml
+++ b/avatar/localisation/research_l_english.yml
@@ -1188,7 +1188,7 @@
  construction_l2:0 "Rudimentary Brickmaking"
  construction_l2_desc:0 "A new method of construction involving pouring mud into a latice of wood slats and leaving them in the sun to dry and harden into bricks leads to drastic improvements in the speed of construction and durability of buildings."
  construction_r2:0 "Masonry"
- construction_r2_desc:0 "Economic specialization gives rise to a new group of professionals whose job is to build and repair buildings and are on hand on a regular basis, rather than having to wait for an off season to make repairs to buildings."
+ construction_r2_desc:0 "Economic specialization gives rise to a new group of professional benders whose job is to build and repair buildings and are on hand on a regular basis, rather than having to wait for an off season to make repairs to buildings."
  repair_2:0 "Mortar"
  repair_2_desc:0 "Quick drying mortar developed by the new class of masons makes repairs faster and easier. Mortar can even be stored in clay jars on site so that owners can make their own minor repairs if a mason is not readily available."
  construction_l3:0 "Cut Stone"
@@ -1223,13 +1223,13 @@
  repair_7_desc:0 "Standardized glass blowing by artisans allows windows, which up until this point were either filled with translucent stone or less sturdy poured glass, to be mass produced, making them easily replaceable."
  construction_l8:0 "Steel Supports"
  construction_l8_desc:0 "With the mass production of steel, the skelatons of buildings can now be made of metal and they can now be build much wider without sacrificing structural integrity."
- basic_production:0 "Neolithic Production"
- basic_production_desc:0 "Arrows, spears, bows, and other tools are all produced by hand, either by knapping stone into pointed shapes or using stone tools to carve wood. Work is slow, but certainly faster than when wooden tools were the norm."
- production_1:0 "Bronze Age"
+ basic_production:0 "Hand Tool Production"
+ basic_production_desc:0 "Arrows, spears, bows, and other tools are all produced by hand, either by bending stone into pointed shapes or using stone tools to carve wood. Work is slow, but certainly faster than when wooden tools were the norm."
+ production_1:0 "Bronze"
  production_1_desc:0 "The discovery of copper and tin outcroppings above ground lead to the production of bronze, a new metal for weapons that makes them more durable, so each weapon produced is worth considerably more than its predecessors."
  naval_1:0 "Early Ships"
  naval_1_desc:0 "Tents are made by lashing animal skins together using tendons, so why not wood? The first naval vessels are made by drilling small holes in wood and tying them together using leather straps."
- production_2:0 "Iron Age"
+ production_2:0 "Iron"
  production_2_desc:0 "The use of bronze tools to dig shallow mines exposes iron, which when worked into tools and weapons, proves even stronger than the bronze alloys and easier to manipulate."
  naval_2:0 "Pitch Construction"
  naval_2_desc:0 "By replacing leather straps with pitch, ships become even more water tight. The newly assembled ships are both cheaper, since one barrel of pitch is easier to collect than several animal hides."
@@ -1242,7 +1242,7 @@
  naval_4:0 "Decks and Rudders"
  naval_4_desc:0 "Technological inovations in naval warfare evolve rapidly. Shipwrights learn farily quickly that multiple decks on a ship afford more protection from incoming fire and rear rudders make for much more efficient steering."
  production_5:0 "Steel Production"
- production_5_desc:0 "Steel, once a rare and prized metal found only very rarely through natural mixing of iron and carbon, is now manufactured, albeit slowly, by manually mixing coal and iron in the smelting process."
+ production_5_desc:0 "Steel, once a rare and prized metal found only very rarely through the efforts of master benders, is now manufactured, albeit slowly, by manually mixing coal and iron in the smelting process."
  naval_5:0 "Shipwright Guilds"
  naval_5_desc:0 "Guild members have access to vast troves of accumulated knowledge regarding ship construction and design. The formation of these new guilds increases the efficiency of ship construction by quickly disseminating this new information."
  production_6:0 "Commercialization"
@@ -1298,7 +1298,7 @@
  storage_3:0 "Salting and Smoking"
  storage_3_desc:0 "As mines move deeper and deeper into the earth, large deposits of salt are found that dwarf the above ground salt licks. Abundant salt makes the preservation of meat for winter easier and food more abundant even in the colder months."
  farming_3:0 "Irrigation"
- farming_3_desc:0 "By channeling rivers, lakes, and streams, farmers no longer have to rely on the often unpredictable and sometimes deadly flooding to water their crops, so harvests are more frequent and less costly."
+ farming_3_desc:0 "Benders channel rivers, lakes, and streams, so that farmers no longer have to rely on the often unpredictable and sometimes deadly flooding to water their crops, so harvests are more frequent and less costly."
  food_3:0 "Crop Specialization"
  food_3_desc:0 "Until now, farmers settled on hills and those settled in rich river valleys have been cultivating the same crops to feed their local villages, but trade allows them to specialize in crops better suited to individual climes, which can then be traded for other necessities."
  tanning_3:0 "Animals Hunting Animals"
@@ -1339,8 +1339,8 @@
  food_5_desc:0 "Farmers have been replanting the heartiest crop varieties for generations, but a recent discovery about the way that plants reproduce now allows them to breed plants with complementary attributes, creating entire new hybrid species."
  tanning_5:0 "Enclosure"
  tanning_5_desc:0 "The rapid expansion of animal raising in the new flourishing fur encomy has caused many disputes between ranchers about where farm animals will be allowed to graze. The enclosure of certain stretches of land with fences settles these disputes and stabilizes the animal market."
- mining_5:0 "Gold Rush"
- mining_5_desc:0 "Since many average citizens now own their own rudimentary metal tools, some of which are no more than kitchen utensils, the discovery of even minor outcroppings of precious metals means massive rushes to exploit them, so no stone goes un turned."
+ mining_5:0 "Metal Bending"
+ mining_5_desc:0 "The ingeneous discovery by a master earthbender that even refined metals stil contain traces of earth allows skilled earth benders to ferret out and extract metal at great distances without the trouble of digging great mines."
  mining_c5:0 "Mechanized Mining"
  mining_c5_desc:0 "New machines, some of them powered by the very coal that they mine, can carve out even the most hardened rock, allowing mining corporations to return to old mines long thought tapped out and remove any remaing traces of valuable coal."
  textile_5:0 "Spinning Jenny"
@@ -1356,22 +1356,22 @@
  tanning_6:0 "Artificial Breeding"
  tanning_6_desc:0 "While it may seem a simple fact that animal husbandry depends directly on the natural reproductive cycle of the animals being raised, farmers discover that with special attention, animals can be artificially bred at a much faster rate, so there is little fear of depleting species entirely."
  mining_6:0 "Strip Mining"
- mining_6_desc:0 "New mechanical diggers powered by steam engine are able to remove tons of dirt and rock a minute. To some this sounds like a return to pit mining, but those that witness it up close equate it more to moving entire mountians. The collected ore is crushed and sorted for metals."
+ mining_6_desc:0 "New mechanical diggers powered by steam engine are able to remove tons of dirt and rock a minute. To some this sounds like a return to pit mining, but those that witness it up close equate it more to moving entire mountians. While once only benders could acomplish such feats, now any man with the right machine is capable."
  mining_c6:0 "Rail Construction"
  mining_c6_desc:0 "Coal mining companies have both abuntant access to coal and a need to transport it. Steam engines fitted to rail carts are able to pull cars a much greater distances than pack animals, opening the world up to coal fired machines."
  textile_6:0 "Industrial Weaving"
  textile_6_desc:0 "The mass production of weaving and spinning tools allows some wealthy business owners to accumulate massive troves of machines and then employ workers, many of them the former owners of smaller textile businesses, to produce unprecedented amounts of cloth.
  smelting_1:0 "Steelworks"
  smelting_1_desc:0 "Hot burning coal and finely ground ores combine much more easily than did charcoal and raw iron in olden times. Steel can now be mass produced in massive furnaces capable of melting hundreds of tones of ore at a time and molding it into ingots for distribution."
- smelting_2:0 "Bessemer Process"
+ smelting_2:0 "Sato Process"
  smelting_2_desc:0 "The industrial process of producing steel by cooling it instantaneously rather than by working the metal until it cools. The resultant steel is far stronger and requires far less manpower and material."
  smelting_3:0 "Open-Hearth Steelmaking"
- smelting_3_desc:0 "By leaving one side of the molten steel open to the air, engineers can ad different ingredients as needed. Now steel can be produced with lower grade materials mixed with balancing adatives, making it both cheaper and less wasteful."
- smelting_l1:0 "Pig Iron"
- smelting_l1_desc:0 "A cheaper, higher carbon content variant of iron, it was once thought useless for its brital nature, but when melted to the appropriate temperature it can be mixed to produce cheap, high quality steel."
- smelting_r1:0 "Verticle Integration"
+ smelting_3_desc:0 "By leaving one side of the molten steel open to the air, benders can ad different ingredients as needed. Now steel can be produced with lower grade materials mixed with balancing adatives, making it both cheaper and less wasteful."
+ smelting_l1:0 "Cabage Corps"
+ smelting_l1_desc:0 "With all smelting machines standardized across all manufacturies, very little training is required before a laborer can produce reasonable quality steal quickly, greatly expanding the workforce and increasing production while minimizing waste."
+ smelting_r1:0 "Future Industries"
  smelting_r1_desc:0 "Rather than focus on increasing the efficiency of production methods, some smelters choose instead to buy up mines and mills to ensure a steady, cheap supply of iron and coal, making high quality steel incredibly cheap."
- smelting_l2:0 "Synchronized Mass Production"
- smelting_l2_desc:0 "With all smelting machines standardized across all manufacturies, very little training is required before a laborer can produce reasonable quality steal quickly, greatly expanding the workforce and increasing production while minimizing waste."
+ smelting_l2:0 "Pig Deer Iron"
+ smelting_l2_desc:0 "A cheaper, higher carbon content variant of iron, it was once thought useless for its brital nature, but when melted to the appropriate temperature it can be mixed to produce cheap, high quality steel."
  smelting_r2:0 "National Contracts"
  smelting_r2_desc:0 "With so few businesses competing for weapons manufacturing contracts, steal companies are able to negotiate very favorable prices for their wares. They reinvest this money in even more productive capacity and steel flows as freely as water." 
