--- a/avatar/localisation/ideas_l_english.yml
+++ b/avatar/localisation/ideas_l_english.yml
@@ -436,6 +436,10 @@
  idea_group_mobilization_laws:0 "Conscription Laws"
  disarmed_nation:0 "Disarmed Nation"
  volunteer_only:0 "Volunteer Only"
+ disarmed_water_nation:0 "Disarmed Nation"
+ volunteer_water_nation:0 "Volunteer Only"
+ limited_water_conscription:0 "Limited Conscription"
+ disarmed_earth_nation:0 "Disarmed Nation"
  limited_conscription:0 "Limited Conscription"
  extensive_conscription:0 "Extensive Conscription"
  service_by_requirement:0 "Service by Requirement"
