--- a/avatar/localisation/research_l_english.yml
+++ b/avatar/localisation/research_l_english.yml
@@ -1327,7 +1327,7 @@
  mining_c4_desc:0 "The highest quality coal, anthracite deposits were thought rare until an increasing abundance of metal tools made mining tunnels deeper and wider, leading to vast underground networks spirling out in search of this hotest burning coal."
  textile_4:0 "The Flying Shuttle"
  textile_4_desc:0 "Even the least skilled weavers can now compose massive bolts of cloth in just a few days, revolutionizing the clothing industry and vastly increasing the number of people participating in the industry."
- wood_5:0 The Lumber Mill"
+ wood_5:0 "The Lumber Mill"
  wood_5_desc:0 "A much larger version of the water mills used to crush ores and grains, water is used here to turn saw blades that turn logs into wooden planks in minutes, reducing the number of carpenters needed to process a tree significantly."
  stone_5:0 "Reinforced Wheeled Carts"
  stone_5_desc:0 "Wheeled carts used to transport grain and water were not quite up to the task of carrying stone until metal banding reinforcing the wheels and the undercairage let carts transport stone miles inland from the barges."
