Renamed Steel Researches

--- a/avatar/localisation/research_l_english.yml
+++ b/avatar/localisation/research_l_english.yml
@@ -1363,13 +1363,13 @@
  textile_6_desc:0 "The mass production of weaving and spinning tools allows some wealthy business owners to accumulate massive troves of machines and then employ workers, many of them the former owners of smaller textile businesses, to produce unprecedented amounts of cloth.
  smelting_1:0 "Steelworks"
  smelting_1_desc:0 "Hot burning coal and finely ground ores combine much more easily than did charcoal and raw iron in olden times. Steel can now be mass produced in massive furnaces capable of melting hundreds of tones of ore at a time and molding it into ingots for distribution."
- smelting_2:0 "Sato Process"
+ smelting_2:0 "Cold Rolled Steel"
  smelting_2_desc:0 "The industrial process of producing steel by cooling it instantaneously rather than by working the metal until it cools. The resultant steel is far stronger and requires far less manpower and material."
  smelting_3:0 "Open-Hearth Steelmaking"
  smelting_3_desc:0 "By leaving one side of the molten steel open to the air, benders can ad different ingredients as needed. Now steel can be produced with lower grade materials mixed with balancing adatives, making it both cheaper and less wasteful."
- smelting_l1:0 "Cabage Corps"
+ smelting_l1:0 "Standardized Machinery"
  smelting_l1_desc:0 "With all smelting machines standardized across all manufacturies, very little training is required before a laborer can produce reasonable quality steal quickly, greatly expanding the workforce and increasing production while minimizing waste."
- smelting_r1:0 "Future Industries"
+ smelting_r1:0 "Vertical Integration"
  smelting_r1_desc:0 "Rather than focus on increasing the efficiency of production methods, some smelters choose instead to buy up mines and mills to ensure a steady, cheap supply of iron and coal, making high quality steel incredibly cheap."
  smelting_l2:0 "Pig Deer Iron"
  smelting_l2_desc:0 "A cheaper, higher carbon content variant of iron, it was once thought useless for its brital nature, but when melted to the appropriate temperature it can be mixed to produce cheap, high quality steel."
