--- a/avatar/localisation/research_l_english.yml
+++ b/avatar/localisation/research_l_english.yml
@@ -40,7 +40,7 @@
  persistence_desc:0 "-missing-"
  endurance:0 "Endurance"
  endurance_desc:0 "-missing-"
- change:0 "Change"
+ change:0 "Changerino"
  change_desc:0 "-missing-"
  adaptation:0 "Adaptation"
  adaptation_desc:0 "-missing-"
