--- a/avatar/localisation/stats_l_english.yml
+++ b/avatar/localisation/stats_l_english.yml
@@ -33,16 +33,16 @@
  STAT_ARMY_BREAKTHROUGH_DESC:0 "How many enemy attacks a unit can attempt to avoid while on the offensive, effectively allowing it to stay on the offense longer."
  STAT_ARMY_BREAKTHROUGH_VALUE:0 "$VALUE|H1$"
  STAT_ARMY_BREAKTHROUGH_DIFF:0 " $VALUE|=+1$"
- STAT_ARMY_HARDNESS:0 "Hardness: "
- STAT_ARMY_HARDNESS_DESC:0 "§T§HHardness§! represents how much of your §HDivision§! is made up of armored or at least protected vehicles.\n\nWhen attacked, a Division adds together all Soft Attacks and Hard Attacks. A Division with high §HHardness§! will suffer fewer §HSoft Attacks§! and more §HHard Attacks§! - and vice versa.§!"
+ STAT_ARMY_HARDNESS:0 "Positioning: "
+ STAT_ARMY_HARDNESS_DESC:0 "§T§HPositioning§! represents where your §HDivisions§! are located during a Battle.\n\nWhen attacked, a Division adds together all Vanguard Attacks and Reserve Attacks. A Division with high §HPositioning§! will suffer fewer §HVanguard Attacks§! and more §HReserve Attacks§! - and vice versa.§!"
  STAT_ARMY_HARDNESS_VALUE:0 "$VALUE|H1%$"
  STAT_ARMY_HARDNESS_DIFF:0 " $VALUE|=+1$"
- STAT_ARMY_SOFT_ATTACK:0 "£soft_attack_texticon Soft attack: "
- STAT_ARMY_SOFT_ATTACK_DESC:0 "How many attacks the unit can make versus enemies with low hardness."
+ STAT_ARMY_SOFT_ATTACK:0 "£soft_attack_texticon Vanguard A.: "
+ STAT_ARMY_SOFT_ATTACK_DESC:0 "How many attacks the unit can make versus units on the front."
  STAT_ARMY_SOFT_ATTACK_VALUE:0 "$VALUE|H1$"
  STAT_ARMY_SOFT_ATTACK_DIFF:0 " $VALUE|=+1$"
- STAT_ARMY_HARD_ATTACK:0 "£hard_attack_texticon  Hard attack: "
- STAT_ARMY_HARD_ATTACK_DESC:0 "How many attacks the unit can make versus enemies with high hardness."
+ STAT_ARMY_HARD_ATTACK:0 "£hard_attack_texticon  Reserve A.: "
+ STAT_ARMY_HARD_ATTACK_DESC:0 "How many attacks the unit can make versus units in the backhand."
  STAT_ARMY_HARD_ATTACK_VALUE:0 "$VALUE|H1$"
  STAT_ARMY_HARD_ATTACK_DIFF:0 " $VALUE|=+1$"
  STAT_ARMY_RECON:0 "£recon_texticon  Reconnaissance: "
@@ -299,8 +299,8 @@
  STAT_MISSION_CONVOY_ESCORT_EFFICIENCY:1 "Escort Efficiency: "
  STAT_MISSION_CONVOY_ESCORT_EFFICIENCY_VALUE:0 "$VALUE|H0%$"
  STAT_MISSION_CONVOY_ESCORT_EFFICIENCY_DESC:0 "How quickly Escorts can defend a Convoy under attack."
- SOFT_ATTACK_TAKEN:0 "§TSoft Attack Taken: §!"
- HARD_ATTACK_TAKEN:0 "§THard Attack Taken: §!"
+ SOFT_ATTACK_TAKEN:0 "§TVanguard Attack Taken: §!"
+ HARD_ATTACK_TAKEN:0 "§TReserve Attack Taken: §!"
  STAT_TOOLTIP_DESIGNER_DIFF:0 "$NAME|H$: $VALUE$"
  STAT_COMMON_BUILD_COST_IC_T_CONVERTING:0 "§TConversion cost: §!"
  STAT_ARMY_EQUIPMENT_CAPTURE_FACTOR:0 "£capture_texticon  Eq. Capture Ratio: "
