--- a/avatar/localisation/research_l_english.yml
+++ b/avatar/localisation/research_l_english.yml
@@ -40,7 +40,7 @@
  persistence_desc:0 "-missing-"
  endurance:0 "Endurance"
  endurance_desc:0 "-missing-"
- change:0 "Changerino"
+ change:0 "Change"
  change_desc:0 "-missing-"
  adaptation:0 "Adaptation"
  adaptation_desc:0 "-missing-"
@@ -1085,27 +1085,27 @@
  fuel_refining4_desc:0 "New developments in chemical engineering allow the refining of fuel from new sources."
  fuel_refining5:0 "Fuel Refining V"
  fuel_refining5_desc:0 "Using new methods and improved layouts in the construction of refineries dramatically increases throughput while reducing wastage."
- reform_0:0 "Leaving the Lion Turtles"
- reform_0_desc:0 "The lion turtles have provided shelter for mankind for as long as can be remembered, but leaving the shelter of their mighty shells will offer us greater opportunity for expansion and growth."
- progressive_0:0 "Sedentrism"
- progressive_0_desc:0 "Settling down in one place allows societies to lay claim to a fixed area of land on which to build new and improved structures."
- conservative_0:0 "Nomadism"
- conservative_0_desc:0 "By continuing to wander rather than settling down, societies can avoid becoming dependent on the trinkets that swiftly emerge in agrarian societies."
+ reform_0:0 "Sedentrism"
+ reform_0_desc:0 "Settling down in one place allows societies to lay claim to a fixed area of land on which to build new and improved structures."
+ progressive_0:0 "Spiritual Evolution"
+ progressive_0_desc:0 "Like the Chi in our bodies, knowledge must prepetually flow and renovate itself, to remain blindly faithful to our beliefs is, like a blocked chakra, an obstacle to reach our true potential"
+ conservative_0:0 "Spiritual Dogmatism"
+ conservative_0_desc:0 "There are certain laws that define this world, such as those who dictate that the Chi only flows in one direction and not the other, to go against the natural order of things is the fastest road to ruin"
  progressive_economy_0:0 "Agrarian Economy"
  progressive_economy_0_desc:0 "A focus on crop cultivation leads to the rise of specialty farming, which increases both crop yields and the nutrition levels of said crops."
  progressive_resources_0:0 "Trade"
  progressive_resources_0_desc:0 "Fixed city and town locations give rise to known trading routes and increase the overall economic efficiency of the society as a whole."
  progressive_education_0:0 "Written Records"
- progressive_education_0_desc:0 "The increased crop yields and growing trade require a class of scribes to keep track of amounts and prices. These scribes will often use their free time to advance the research of new inovations in technology."
+ progressive_education_0_desc:0 "Since time immemorial, the tales of our people have been passed down from the elder to the the younger, fact becomes legend, legend becomes myth, and some things that should not have been forgotten were lost. But what is written remains, unchanged, for a thousand years to come."
  conservative_economy_0:0 "Pastoral Economy"
  conservative_economy_0_desc:0 "Nomadic herders and their accompanying communities start to get a sense of most efficient seasonal feeding grounds, increasing the amount of food produced per unit of livestock."
  conservative_resources_0:0 "Foraging"
- conservative_resources_0_desc: "As nomadic societies get used to life off of the backs of the lion turtles, they begin to identify the most fertile forrests and abundant natural resources in their wide range." 
+ conservative_resources_0_desc: "As tribal societies get used to life off of the backs of the lion turtles, they begin to identify the most fertile forrests and abundant natural resources in their wide range." 
  conservative_education_0:0 "Storytelling Traditions"
- conservative_education_0_desc:0 "A rich oral history developes to pass on the traditions an knowledge of the nomadic clans, increasing both the overall knowledge and entertainment of the average citizen."
- reform_1:0 "Tribalism"
+ conservative_education_0_desc:0 "A rich oral history developes to pass on the traditions an knowledge of the clans, increasing both the overall knowledge and entertainment of the average citizen."
+ reform_1:0 "Urban Revolution"
  reform_1_desc:0 "Societal roles begin to settle as a natural heirarchy forms, increasing the level of professional specialization and overall societal stability."
- progressive_1:0 "Seperation of Powers"
+ progressive_1:0 "Separation of Powers"
  progressive_1_desc:0 "The recognized role of checks and balances limits the government's interference in the economy, increasing the flexibility of the economy to meet the current demands of society."
  conservative_1:0 "Autocracy"
  conservative_1_desc:0 "Centralized rule means that the ruling class has a vested interest preserving the economic status quo, so it pours resources into protecting and repairing businesses."
