further fixes to tech localization

--- a/avatar/localisation/research_l_english.yml
+++ b/avatar/localisation/research_l_english.yml
@@ -1103,7 +1103,7 @@
  conservative_resources_0_desc: "As tribal societies get used to life off of the backs of the lion turtles, they begin to identify the most fertile forrests and abundant natural resources in their wide range." 
  conservative_education_0:0 "Storytelling Traditions"
  conservative_education_0_desc:0 "A rich oral history developes to pass on the traditions an knowledge of the clans, increasing both the overall knowledge and entertainment of the average citizen."
- reform_1:0 "Urban Revolution"
+ reform_1:0 "Feudalism""
  reform_1_desc:0 "Societal roles begin to settle as a natural heirarchy forms, increasing the level of professional specialization and overall societal stability."
  progressive_1:0 "Separation of Powers"
  progressive_1_desc:0 "The recognized role of checks and balances limits the government's interference in the economy, increasing the flexibility of the economy to meet the current demands of society."
@@ -1121,8 +1121,8 @@
  conservative_resources_1_desc:0 "Consolodation of wealth, power, and land under a limited upper class increases the efficiency of resource detection and extraction."
  conservative_education_1:0 "Royal Scribes"
  conservative_education_1_desc:0 "A well trained, limited number of scribes on the royal payroll decreases the overall expense of recordkeeping for society while increasing the overall speed of research."
- reform_2:0 "Feudalism"
- reform_2_desc:0 "The increased security of advancing weaponry and a dedicated class of soldiers allows businesses to expand into areas previously considered too dangerous to approach."
+ reform_2:0 "Urban Revolution"
+ reform_2_desc:0 "As wealth becomes more abundant, population grows and concentrates into  the areas of higher opportunities, increased population leads to a larger workforce and new society demands, and thus, small isolated villages become massive hubs of wealth and developement."
  progressive_2:0 "Humanism"
  progressive_2_desc: "Greater acceptance of all systems of belief and the decriminalization of formerly heretical sciences increases both the available workforce and the efficiency of formerly laborious procedures"
  conservative_2:0 "Spiritualism"
@@ -1139,8 +1139,8 @@
  conservative_resources_2_desc:0 "The institution of the first legal system of permenant land ownership encourages owners to thuroughly survey their land for resources and cultivate it to its greatest extent, since they are guaranteed to reap the benefit."
  conservative_education_2:0 "Erudite Clergy"
  conservative_education_2_desc:0 "As religious institutions grow in wealth and power, they find themselves in need of more and more clergymen, almost all of whom come from noble backgrounds, so they invest in more and more schools to train them, leading to a boom in the educated population and a decrease in the number of people supported by noble taxes."
- reform_3:0 "Private Enterprise"
- reform_3_desc:0 "Private ownership of businesses and land further incentivises inovation and the diminishment of royal lands through sale to the growing middle class increases the density and number of buildings in the newly growing cities"
+ reform_3:0 "Proto-Industrialization"
+ reform_3_desc:0 "A sudden inovation, the steam engine, leads to both a vast increase in the efficiency of most production and the ability to miniaturize industries that used to require many more people and much more land."
  progressive_3:0 "Abolish the Nobility"
  progressive_3_desc:0 "The overthrowl of the ruling classes turns the reigns of government over to the people, who use them to enact swift reorganization of the economy to fill the needs of the many rather than the few."
  conservative_3:0 "Defend Estates Rights"
@@ -1157,8 +1157,8 @@
  conservative_resources_3_desc:0 "Further codification of the universal right to property increases the number of privately owned plots of land being surveyed for resources."
  conservative_education_3:0 "Homeschooling"
  conservative_education_3_desc:0 "The privatization of education decreases the cost to society at large while still ensuring a certain level of common knowledge."
- reform_4:0 "Proto-Industrialization"
- reform_4_desc:0 "A sudden inovation, the steam engine, leads to both a vast increase in the efficiency of most production and the ability to miniaturize industries that used to require many more people and much more land."
+ reform_4:0 "Private Enterprise"
+ reform_4_desc:0 "Private ownership of businesses and land further incentivises inovation and the diminishment of royal lands through sale to the growing middle class increases the density and number of buildings in the newly growing cities"
  progressive_4:0 "Progressivism"
  progressive_4_desc:0 "A societal emphasis on scientific advancement produces inovative new methods and the emergence of interchangable parts allows for swift conversion of production lines."
  conservative_4:0 "Conservativism"
