--- a/avatar/localisation/stats_l_english.yml
+++ b/avatar/localisation/stats_l_english.yml
@@ -37,11 +37,11 @@
  STAT_ARMY_HARDNESS_DESC:0 "§T§HPositioning§! represents where your §HDivisions§! are located during a Battle.\n\nWhen attacked, a Division adds together all Vanguard Attacks and Reserve Attacks. A Division with high §HPositioning§! will suffer fewer §HVanguard Attacks§! and more §HReserve Attacks§! - and vice versa.§!"
  STAT_ARMY_HARDNESS_VALUE:0 "$VALUE|H1%$"
  STAT_ARMY_HARDNESS_DIFF:0 " $VALUE|=+1$"
- STAT_ARMY_SOFT_ATTACK:0 "£soft_attack_texticon Vanguard A.: "
+ STAT_ARMY_SOFT_ATTACK:0 "£soft_attack_texticon Frontal Attack: "
  STAT_ARMY_SOFT_ATTACK_DESC:0 "How many attacks the unit can make versus units on the front."
  STAT_ARMY_SOFT_ATTACK_VALUE:0 "$VALUE|H1$"
  STAT_ARMY_SOFT_ATTACK_DIFF:0 " $VALUE|=+1$"
- STAT_ARMY_HARD_ATTACK:0 "£hard_attack_texticon  Reserve A.: "
+ STAT_ARMY_HARD_ATTACK:0 "£hard_attack_texticon  Rear Attack: "
  STAT_ARMY_HARD_ATTACK_DESC:0 "How many attacks the unit can make versus units in the backhand."
  STAT_ARMY_HARD_ATTACK_VALUE:0 "$VALUE|H1$"
  STAT_ARMY_HARD_ATTACK_DIFF:0 " $VALUE|=+1$"
