--- a/avatar/localisation/research_l_english.yml
+++ b/avatar/localisation/research_l_english.yml
@@ -1177,8 +1177,8 @@
  conservative_education_4_desc:0 "Private schools, funded entirely by tuition, are less costly to society and still produce a good amount of valuable research."
  reform_5:0 "Industrial Revolution"
  reform_5_desc:0 "Improvements on the steam engine turn it from a tool for the very wealthy into a machine that can be placed in almost every tool, workshop, and vehicle, creating the largest expansion yet in production."
- basic_construction:0 "Stone Age"
- basic_construction_desc:0 "The development of rudimentary stone tools triggers a dominoe effect as tools are used to make even more tools at a much faster rate, meaning that broken tools can be replaced almost instantly."
+ basic_construction:0 "Engineering"
+ basic_construction_desc:0 "The application of scientific principles to the design and construction of structures and tools is fundamental"
  construction_l1:0 "Packed Clay"
  construction_l1_desc:0 "The first long term structures in history are made out of clay dug from the river bank, pressed into thick layers, and allowed to dry. These new buildings are more permanent and abundant than the animal skin tents of old."
  construction_r1:0 "Timber Frames"
@@ -1224,21 +1224,21 @@
  construction_l8:0 "Steel Supports"
  construction_l8_desc:0 "With the mass production of steel, the skelatons of buildings can now be made of metal and they can now be build much wider without sacrificing structural integrity."
  basic_production:0 "Hand Tool Production"
- basic_production_desc:0 "Arrows, spears, bows, and other tools are all produced by hand, either by bending stone into pointed shapes or using stone tools to carve wood. Work is slow, but certainly faster than when wooden tools were the norm."
- production_1:0 "Bronze"
- production_1_desc:0 "The discovery of copper and tin outcroppings above ground lead to the production of bronze, a new metal for weapons that makes them more durable, so each weapon produced is worth considerably more than its predecessors."
+ basic_production_desc:0 "There is only as much as an individual can achieve using only raw materials and his bare hands, however by assembling tools, one can use these to greatly improve the effectivness of the creation of even more advanced tools, and also weapons."
+ production_1:0 "Copper casting"
+ production_1_desc:0 "With innovations in investment casting, we are able to build tools made out of metals such as the easily available copper ore, these tools are more durable and easier to repair when damaged when compared to their predecessors."
  naval_1:0 "Early Ships"
  naval_1_desc:0 "Tents are made by lashing animal skins together using tendons, so why not wood? The first naval vessels are made by drilling small holes in wood and tying them together using leather straps."
- production_2:0 "Iron"
- production_2_desc:0 "The use of bronze tools to dig shallow mines exposes iron, which when worked into tools and weapons, proves even stronger than the bronze alloys and easier to manipulate."
+ production_2:0 "Bronze Alloy"
+ production_2_desc:0 "The exploitation of copper and tin outcroppings above ground lead to the discovery of a new alloy we call bronze, this metal makes tools and weapons more durable than mere copper, so each weapon produced is worth considerably more than before."
  naval_2:0 "Pitch Construction"
  naval_2_desc:0 "By replacing leather straps with pitch, ships become even more water tight. The newly assembled ships are both cheaper, since one barrel of pitch is easier to collect than several animal hides."
- production_3:0 "Standardized Weaponry"
- production_3_desc:0 "Larger civilizations require larger armies. Each civilization settles on a length of sword, number of spear prongs, and number of arrow barbs, allowing for mass production of weapons to arm their new armies."
+ production_3:0 "Iron Forging"
+ production_3_desc:0 "The use of bronze tools to dig shallow mines exposes iron, which when worked into tools and weapons, proves even stronger than the bronze alloys and far more resistant to bending and damage."
  naval_3:0 "Wind Propulsion"
  naval_3_desc:0 "Up until now all ships have been propelled by either oars or polls, but using newly flexible cloth as a sail, ships can now travel greater distances and do not require nearly as much wood to produce."
- production_4:0 "Mulinational Engineering"
- production_4_desc:0 "Cultural exchange regarding weaponry, either by trade or coersion, results in a boom in technological inovation. Old methods are now a thing of the past and weapons are produced much more efficiently."
+ production_4:0 "Standardized Weaponry"
+ production_4_desc:0 "Larger civilizations require larger armies. Each civilization settles on a length of sword, number of spear prongs, and number of arrow barbs, allowing for mass production of weapons to arm their new armies."
  naval_4:0 "Decks and Rudders"
  naval_4_desc:0 "Technological inovations in naval warfare evolve rapidly. Shipwrights learn farily quickly that multiple decks on a ship afford more protection from incoming fire and rear rudders make for much more efficient steering."
  production_5:0 "Steel Production"
@@ -1253,16 +1253,16 @@
  production_7_desc:0 "As production speeds up, it is quickly realized that rather than making entire weapons in one go, constituate parts can be standardized and produced separately to be assemble later."
  naval_7:0 "Ironclad"
  naval_7_desc:0 "The newly cheap steel and the practice of iron reinforcement lead to a natural conclusion: steel ships. Current wooden ships are clad in steel, but new ships are produced entirely in steel, yet they are cheaper than having to chop down an entire forest for one ship."
- basic_gathering:0 "Natural Abundance"
- basic_gathering_desc:0 "With nature as bountiful as it is and the number of tribes being as small as they are, simple gathering will surely provide for our needs."
- wood_1:0 "Stone Axes"
- wood_1_desc:0 "Stone tools allow for whole trees to be felled, rather than just fallen branches and dead logs. This new abundance of wood opens society up to whole new construction possibilities."
+ basic_gathering:0 "Logging Axes"
+ basic_gathering_desc:0 "We cannot prepetually rely on fallen branches and dead logs, to fulfuill our construction needs we require entire trees to be felled, and for that reason we require tools cappable of such task."
+ wood_1:0 "Bronze Axes"
+ wood_1_desc:0 "A significant improvement over their copper predecessors, bronze axes not only prove to be more resiliant, but also easier to repair."
  stone_1:0 "Stone Knapping"
  stone_1_desc:0 "No longer do we need to rely on finding already half-formed arrowheads and stone ax blades. Now whole stones can be shaped into whatever tools are needed."
  storage_1:0 "Clay Pottery"
  storage_1_desc:0 "The use of large stone jars has long been possible in the earth kingdom, but the evolution of clay pottery makes storage possbile even for those who are not benders. Granaries can now be built virtually everywhere."
- farming_1:0 "Transition from Nomadism"
- farming_1_desc:0 "Stands of wild grains have long been a staple that has fed our tribes for generations, but one day tribes found that a particular stand of grain had developed past its expected potential. They settled down next to that patch and cultivated, leading to increased food output."
+ farming_1:0 "Agriculture"
+ farming_1_desc:0 "The tribe increased in number and we cannot afford to live of hunting and gathering anymore, it has been known that seeds grow into plants for a long time, so we should use this process in order to grow our own food, instead of hoping for nature to grow it for us."
  food_1:0 "Cultivation"
  food_1_desc:0 "A stable food source established, certain members of the tribe begin spending more time in and amongst the crops. Soon they learn that there are some stands that produce more than others. In the next growing season, they are sure to replant only those strands."
  tanning_1:0 "Animal Husbandry"
@@ -1273,8 +1273,8 @@
  mining_c1_desc:0 "Coal was only very rarely found above ground, and even then there was only ever enough for painting and drawing. Once mining moved underground, however, large seems could be exploited to drive industrial progress."
  textile_1:0 "Homespun Cloth"
  textile_1_desc:0 "Some societies use wool, others reeds, and still others flax, but no matter the material, all begin to use the newly abundant materials around them to create new, more durable cloths."
- wood_2:0 "Bronze Axes"
- wood_2_desc:0 "A significant improvement on their stone predecessors, bronze axes not only fell trees faster, but also wear out significantly slower, allowing for woodsman to increase production several times over."
+ wood_2:0 "Iron Axes"
+ wood_2_desc:0 "Iron axes are significantly more resistent and keep a sharp edge for far longer than their bronze predecessors. This frees up a lot of time that used to be wasted sharpening the edge of the axes, and turns it into productive logging."
  stone_2:0 "Metal Drills"
  stone_2_desc:0 "Improvements in metalworking lead to the widespread use of metal tools. Cheif among them are metal drills, which are used to bore holes in cliff faces, which can then be wedged open to split the rock away from its source."
  storage_2:0 "Record Keeping"
@@ -1291,8 +1291,8 @@
  mining_c2_desc:0 "Mines get deeper and deeper now that they are well supported. It seems that not only are richer veins of metal found at this depth, but also of coal. The coal found in these deeper mines burns hotter and longer than the higher deposits."
  textile_2:0 "Cottage Industry"
  textile_2_desc:0 "As fewer and fewer people need to farm in order to feed a village, the specialty industry of weaving emerges, making cloth more common and therefore more accessible."
- wood_3:0 "Iron Axes"
- wood_3_desc:0 "Still sharper tools mean that even the dwindling forests surrounding the villages are still yeilding timber, largely because the oldest and tallest trees, formerly to large to attempt to chop down, are now withing reach of even the most basic woodsman."
+ wood_3:0 "Saws"
+ wood_3_desc:0 "With the help of these tools, we can cut wood into planks of any shape or size, timber can now be used more efficiently than ever, with minimal waste."
  stone_3:0 "Hand Hewn Stone"
  stone_3_desc:0 "Some softer stones, like limestone and sandstone, can be cut by hand, a much faster and labor intensive process than spliting rock off from cliff faces using wedges."
  storage_3:0 "Salting and Smoking"
