Girls from Ba Sing Se

--- a/avatar/localisation/music_l_english.yml
+++ b/avatar/localisation/music_l_english.yml
@@ -32,6 +32,7 @@
  avatars_love:0 "Compassion"
  peace:0 "Peace"
  the_sun_warriors:0 "The Sun Warriors"
+ its_a_long_way:0 "The Girls From Ba Sing Se"
 
 
 
