water terrain gfx

--- a/avatar/localisation/strategic_region_names_l_english.yml
+++ b/avatar/localisation/strategic_region_names_l_english.yml
@@ -163,7 +163,7 @@
  STRATEGICREGION_163:2 "West Patola Archipelago"
  STRATEGICREGION_164:1 "Westerly sea"
  STRATEGICREGION_165:1 "Eastern Air Island"
- STRATEGICREGION_166:0 "Hudson Bay"
+ STRATEGICREGION_166:0 "Blue Sea"
  STRATEGICREGION_167:1 "Western Antarctic Sea"
  STRATEGICREGION_168:1 "Ice Shard Sea"
  STRATEGICREGION_169:1 "West Patola Sea"
@@ -176,7 +176,7 @@
  STRATEGICREGION_176:2 "Gaoling Lowlands"
  STRATEGICREGION_177:1 "West Whale Sea"
  STRATEGICREGION_178:1 "East Patola Sea"
- STRATEGICREGION_179:1 " Shipbreaker Sea"
+ STRATEGICREGION_179:1 "Shipbreaker Sea"
  STRATEGICREGION_180:1 "South Whale Sea"
  STRATEGICREGION_181:1 "Nan Shan River"
  STRATEGICREGION_182:1 "Nan Shan Sea"
